Add middle text and image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,11 @@ body {
     width: 100%;
     background: url("../images/main-imagesm.jpg") no-repeat center center;
 }
+
+.descrip-image {
+    height: 60%;
+    width: 100%;
+}
 /*----------------------------------------Footer*/
 
 footer {
