--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,48 @@ body {
     height: 60%;
     width: 100%;
 }
+
+section h3 {
+    text-transform: uppercase;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: 25px;
+}
+
+.wool-range, .linen-range, .faux-leather-range {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    text-align:center
+}
+
+    
+.product-description, .enquire-btn {
+
+    padding-top: 100px;
+}
+
+@media (max-width: 767px) {
+    .product-description, .enquire-btn {
+      padding-top: 20px;
+    }
+}
+
+.wool-image {
+    height: 300px;
+    background: url("../images/knitting-rangesm.jpg") no-repeat center center;
+}
+
+.linen-image {
+    height: 300px;
+    background: url("../images/material-samplessm.jpg") no-repeat center center;
+}
+
+.leather-image {
+    height: 300px;
+    background: url("../images/sample-productsm.jpg") no-repeat center center;
+}
+
 /*----------------------------------------Footer*/
 
 footer {
