enquiry button styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,8 +95,8 @@ section h3 {
 }
 
 .wool-range, .linen-range, .faux-leather-range {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     padding-left: 20px;
     text-align:center
 }
@@ -126,6 +126,12 @@ section h3 {
 .leather-image {
     height: 300px;
     background: url("../images/sample-productsm.jpg") no-repeat center center;
+}
+
+.enquiry {
+    border-radius: 10%;
+    background-color: #14213d;
+    color:#fca311
 }
 
 /*----------------------------------------Footer*/
