add social links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,16 @@ body {
 }
 
 .descrip-image {
-    height: 60%;
+    height: 90%;
     width: 100%;
+    margin: auto;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.history {
+    width: 500px;
+    margin: auto;
 }
 
 section h3 {
@@ -103,7 +111,6 @@ section h3 {
 
     
 .product-description, .enquire-btn {
-
     padding-top: 100px;
 }
 
@@ -128,11 +135,18 @@ section h3 {
     background: url("../images/sample-productsm.jpg") no-repeat center center;
 }
 
-.enquiry {
+.enquiry, .submit-button {
     border-radius: 10%;
     background-color: #14213d;
-    color:#fca311
-    
+    color: #cccccc;
+}
+
+.submit-button:hover {
+    color:#fca311;
+}
+
+.enquiry:hover {
+    color: #fca311;
 }
 
 .g-3 {
@@ -149,6 +163,41 @@ section h3 {
    padding-left: 100px;
    padding-right: 100px;
    padding-top: 20px;
+}
+
+.form-confirmation {
+    text-align: center;
+}
+
+.form-confirmation-message {
+    text-align: center;
+    font-size: 120%;
+}
+
+#home-text {
+    font-size: 110%;
+    width: 300px;
+    height: 200px;
+    text-align: center;
+    background-color: rgb(204, 204, 204, 0.5);
+    margin:auto;
+    border-radius: 5%;
+}
+
+#home-text p {
+    padding-top: 20px;
+}
+
+#home-text button {
+    margin-top: 20px;
+    font-size: 120%;
+    border-radius: 5%;
+    background-color: #14213d;
+    color:#cccccc;
+}
+
+#home-text button:hover {
+    color:#fca311;
 }
 
 /*----------------------------------------Footer*/
