--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,12 +82,12 @@ body {
     background: url("../images/main-imagesm.jpg") no-repeat center center;
 }
 
-.descrip-image {
-    height: 90%;
+#descrip-image {
+    height:300px;
     width: 100%;
-    margin: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    margin:auto;
+    
+    background: url("../images/form-imagesm.jpg") no-repeat center center;
 }
 
 .history {
